# financial-anomaly-detection

./: FINDINGS.md  HYPOTHESIS_REGISTRY.md  README.md  app.py  environment.yml  project.yaml  pyproject.toml  reproduce.sh
.github/workflows/: ci.yml
blog/: conference_abstract.md  draft.md  linkedin_post.md  substack_intro.md
docs/: ARTIFACT_MANIFEST_SPEC.md  A_PLUS_CHECKLIST.md  CLAUDE_MD.md  CONTENT_PLAN.md  DATA_CONTRACT.md  DECISION_LOG.md  EXPERIMENT_CONTRACT.md  FIGURES_TABLES_CONTRACT.md  HYPOTHESIS_CONTRACT.md  HYPOTHESIS_REGISTRY.md  IMPLEMENTATION_PLAYBOOK.md  METRICS_CONTRACT.md  PROJECT_BRIEF.md  PROVENANCE_SPEC.md  PUBLICATION_PIPELINE.md
outputs/baselines/: summary_seed123.json  summary_seed42.json
outputs/diagnostics/: complexity_curves_seed1024.json  complexity_curves_seed123.json  complexity_curves_seed42.json  complexity_curves_seed456.json  complexity_curves_seed789.json  complexity_curves_summary.json  learning_curves_seed1024.json  learning_curves_seed123.json  learning_curves_seed42.json  learning_curves_seed456.json  (+7 more)
scripts/: check_all_gates.sh  check_integrity.py  check_phase_0.sh  check_phase_1.sh  check_phase_2.sh  check_phase_3.sh  check_phase_4.sh  check_rubric.py  generate_figures.py  generate_synthetic_data.py  make_report_figures.py  run_complexity_curves.py  run_learning_curves.py  run_pipeline.py  run_sanity_baselines.py  sweep.sh  train_expanded_models.py  verify_manifests.py
tests/: conftest.py  test_controllability.py  test_data_integrity.py  test_pipeline.py  test_reproducibility.py  test_sanity.py
(+9 files in other folders)
